--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ aya-23-8B.Q2_K.llamafile
 /src/telegram-bot/
 /data/pkl/cleared_documents.pkl
 tinyllama-1.1b-chat-v1.0.Q4_K_M-server.llamafile
+/src/models/
